# fluentd

./: .deepsource.toml  .drone.yml  .gitignore  .gitlab-ci.yml  .rubocop.yml  .rvmrc  .travis.yml  ADOPTERS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  COPYING  ChangeLog  Dockerfile  ENTERPRISE_PROVIDERS.md  GOVERNANCE.md  Gemfile  Gemfile.cool.io.1.1.1  GithubWorkflow.md  LICENSE  MAINTAINERS.md  Makefile.am  NOTICE  README.md  README.rdoc  Rakefile  SECURITY.md  VERSION  Vagrantfile  appveyor.yml  autogen.sh  code-of-conduct.md  configure.in  docker-compose.yml  fluent.conf  fluent.conf.rb  fluent.gemspec  fluentd.gemspec  make_dist.sh  test.rb  (+1 more)
.bundle/: config
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/DISCUSSION_TEMPLATE/: q-a-japanese.yml  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report.yml  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: backport.yml  benchmark.yml  build.yaml  issue-auto-closer.yml  linux-test.yaml  macos-test.yaml  rubocop.yml  run_test.yml  scorecards.yml  stale-actions.yml  test-ruby-head.yaml  test-ruby-head.yml  test.yaml  test.yml  windows-test.yaml
.gitlab/: cicd-template.yaml
.test-rescue/: config.yml
conf/: fluent.conf
docs/configuration/: system.md
example/: chunkio.conf  copy_roundrobin.conf  counter.conf  dummy.conf  dummy_v10_compat.conf  filter_stdout.conf  filter_typecast.conf  in_dummy_blocks.conf  in_dummy_with_compression.conf  in_forward.conf  in_forward_client.conf  in_forward_shared_key.conf  in_forward_tls.conf  in_forward_users.conf  in_forward_workers.conf  in_http.conf  in_out_forward.conf  in_sample_blocks.conf  in_sample_with_compression.conf  in_status.conf  in_syslog.conf  in_tail.conf  in_tcp.conf  in_udp.conf  logevents.conf  multi_filters.conf  object_buffered_test.conf  out_buffered_null.conf  out_copy.conf  out_exec_filter.conf  out_file.conf  out_forward.conf  out_forward_buf_file.conf  out_forward_client.conf  out_forward_heartbeat_none.conf  out_forward_sd.conf  out_forward_shared_key.conf  out_forward_srv.conf  out_forward_tls.conf  out_forward_users.conf  (+8 more)
lib/: fluent.rb  fluentd.rb
lib/fluent/: #parser.rb#  agent.rb  buffer.rb  capability.rb  clock.rb  config.rb  config_dsl.rb  configurable.rb  counter.rb  daemon.rb  daemonizer.rb  engine.rb  env.rb  env_utils.rb  error.rb  event.rb  event_chunk.rb  event_router.rb  ext_monitor_require.rb  file_wrapper.rb  filter.rb  fluent_log_event_router.rb  formatter.rb  input.rb  input_compat.rb  json.rb  label.rb  load.rb  log.rb  match.rb  mixin.rb  msgpack_factory.rb  ntime.rb  oj_options.rb  output.rb  output_chain.rb  output_compat.rb  parser.rb  plugin.rb  plugin_helper.rb  (+25 more)
lib/fluentd/: actor.rb  agent.rb  agent_group.rb  agent_logger.rb  api.rb  buffer.rb  buffers.rb  bundler_injection.rb  chunk.rb  chunks.rb  collector.rb  collectors.rb  config.rb  config_context.rb  config_error.rb  config_types.rb  configurable.rb  core.rb  dns_resolver.rb  emitter_agent.rb  engine.rb  env.rb  errors.rb  event_collection.rb  event_emitter.rb  event_router.rb  event_stream.rb  filtered_collector.rb  has_event_router.rb  has_nested_match.rb  heartbeat_manager.rb  internal_unix_server.rb  io_exchange.rb  label.rb  logger.rb  match_pattern.rb  message_bus.rb  message_router.rb  message_source.rb  (+20 more)
licenses/: fluentd-latest.cyclonedx.json  fluentd-latest.spdx.json
pkg/: fluentd-0.10.35.gem  fluentd-0.10.42.gem  fluentd-0.10.46.gem  fluentd-0.10.46.win150118001.gem  fluentd-0.10.46.win150125001.gem  fluentd-0.10.46.win150316001.gem
spec/: actor_spec.rb  agent_spec.rb  configurable_spec.rb  dns_resolver_spec.rb  event_router_spec.rb  logger_spec.rb  match_pattern_spec.rb  message_bus_spec.rb  out_retag_spec.rb  root_agent_spec.rb  spec_classes.rb  spec_helper.rb
tasks/: backport.rb  benchmark.rb
test/: buffer.rb  config.rb  configdsl.rb  helper.rb  match_test.rb  mixin.rb  output.rb  parser.rb  test_a.rb  test_buffer.rb  test_capability.rb  test_clock.rb  test_config.rb  test_configdsl.rb  test_daemonizer.rb  test_engine.rb  test_env_utils.rb  test_event.rb  test_event_router.rb  test_event_time.rb  test_file_wrapper.rb  test_filter.rb  test_fluent_log_event_router.rb  test_formatter.rb  test_helper.rb  test_input.rb  test_log.rb  test_logger_initializer.rb  test_match.rb  test_mixin.rb  test_msgpack_factory.rb  test_nano_time.rb  test_ntime.rb  test_oj_options.rb  test_output.rb  test_parser.rb  test_plugin.rb  test_plugin_classes.rb  test_plugin_helper.rb  test_plugin_id.rb  (+12 more)
(+657 files in other folders)
